@@ -1,6 +1,7 @@
 package com.example.demo.service;
 
 import com.example.demo.constant.OrderStatus;
+import com.example.demo.constant.CouponType;
 import com.example.demo.dto.CartDto;
 import com.example.demo.dto.CartItemDto;
 import com.example.demo.dto.OrderDto;
@@ -34,6 +35,7 @@ public class OrderService {
     private final OrderItemRepository orderItemRepository;
     private final ProductRepository productRepository;
     private final ProductModelRepository productModelRepository;
+    private final UserCouponRepository userCouponRepository;
 
     // 주문 목록 가져오기
     @Transactional(readOnly = true)
@@ -50,12 +52,30 @@ public class OrderService {
 
     @Transactional(readOnly = true)
     public OrderDto getOrderByOrderId(String orderId) {
-        // 최종 주문 완료한것 만 보여주기
+        // 최종 주문 완료한 것만 보여주기
         Order order = orderRepository.findByOrderId(orderId).orElseThrow(()-> new IllegalArgumentException("찾는 주문이 없습니다."));
+        List<CartItem> cartItems = cartItemRepository.findByCartUserEmail(order.getUsers().getEmail());
 
-        List<OrderItemDto> orderItemDtos = order.getOrderItems().stream()
-                .map(OrderItemDto::new)
-                .collect(Collectors.toList());
+        List<Long> orderedModelIds = order.getOrderItems().stream()
+                .map(oi -> oi.getProductModel().getId())
+                .toList();
+
+        List<OrderItemDto> orderItemDtos = cartItems.stream()
+                .filter(cartItem -> orderedModelIds.contains(cartItem.getProductModel().getId()))
+                .map(cartItem -> {
+                    OrderItemDto dto = new OrderItemDto();
+                    dto.setProductId(cartItem.getProduct().getId());
+                    dto.setOrderItemId(null);
+                    dto.setProductName(cartItem.getProduct().getName());
+                    dto.setModelId(cartItem.getProductModel().getId());
+                    dto.setCount(cartItem.getCount());
+                    dto.setPrice(cartItem.getProductModel().getPrice());
+                    dto.setImgUrl(cartItem.getProduct().getImages().isEmpty() ? null
+                            : cartItem.getProduct().getImages().get(0).getImageUrl());
+                    dto.setCartItemId(cartItem.getId());
+                    return dto;
+                }).collect(Collectors.toList());
+
         OrderDto dto =  OrderDto.builder()
                 .orderNo(order.getId())
                 .totalPrice(order.getOrderItems().stream().mapToInt(OrderItem::getTotalPrice).sum())
@@ -111,7 +131,7 @@ public class OrderService {
     // 기존에 오더 있는지 확인
     @Transactional(readOnly = true)
     public OrderDto getExistingOrderDto(Users user) {
-        List<Order> existingOrders = findExistingOrders(user);
+        List<Order> existingOrders = orderRepository.findByUsersAndOrderStatus(user, OrderStatus.STAY);;
 
         if (!existingOrders.isEmpty()) {
             Order existingOrder = existingOrders.get(0);
@@ -137,54 +157,157 @@ public class OrderService {
         return null; // 기존 주문이 없으면 null 반환
     }
 
-    // 생성된 주문들 찾기
-    private List<Order> findExistingOrders(Users user) {
-        return orderRepository.findByUsersAndOrderStatus(user, OrderStatus.STAY);
-    }
+//    // 주문 생성
+//    public OrderDto createOrder(String email, List<Long> itemIds) {
+//        Users user = userRepository.findByEmail(email).orElseThrow(() -> new EntityNotFoundException("해당 유저를 찾을 수 없습니다"));
+//
+//        List<OrderItem> orderItems = new ArrayList<>();
+//        int totalAmount = 0;
+//
+//        // 기존 주문이 있는지 확인하고, 있는 경우 기존 주문에 항목 추가
+//        List<Order> existingOrders = findExistingOrders(user);
+//        Order order;
+//        if (!existingOrders.isEmpty()) {
+//            order = existingOrders.get(0);
+//        } else {
+//            order = Order.createOrder(user, new ArrayList<>());
+//            orderRepository.save(order);
+//        }
+//
+//        for (Long cartItemId : itemIds) {
+//            CartItem cartItem = cartItemRepository.findById(cartItemId).orElseThrow(() -> new IllegalArgumentException("찾는 아이템이 없습니다"));
+//            Product product = cartItem.getProduct();
+//            ProductModel productModel = cartItem.getProductModel();
+//
+//            // 기존 주문 항목 중 동일한 제품 및 모델이 있는지 확인
+//            boolean exists = order.getOrderItems().stream()
+//                    .anyMatch(item -> item.getProduct().getId().equals(product.getId()) &&
+//                            item.getProductModel().getId().equals(productModel.getId()));
+//
+//            if (!exists) {
+//                // 기존 주문 항목이 없는 경우 새로 추가
+//                OrderItem orderItem = OrderItem.createOrderItems(product, productModel, cartItem.getCount());
+//                order.addOrderItem(orderItem); // OrderItem 객체를 Order 객체에 추가
+//                totalAmount += orderItem.getTotalPrice();
+//            } else {
+//                // 기존 주문 항목에 있고 수량의 차이가 있다면
+//                OrderItem existingOrderItem = order.getOrderItems().stream()
+//                        .filter(item -> item.getProduct().getId().equals(product.getId()) &&
+//                                item.getProductModel().getId().equals(productModel.getId()))
+//                        .findFirst()
+//                        .orElseThrow(() -> new IllegalArgumentException("주문 항목을 찾을 수 없습니다."));
+//
+//                int newCount = cartItem.getCount();
+//                int oldCount = existingOrderItem.getCount();
+//                int difference = newCount - oldCount;
+//
+//                //재고 수 파악
+////                if (difference > 0) {
+////                    existingOrderItem.getProductModel().removeStock(difference);
+////                } else {
+////                    existingOrderItem.getProductModel().addStock(Math.abs(difference));
+////                }
+//
+//                existingOrderItem.setCount(newCount);
+//                totalAmount += existingOrderItem.getTotalPrice();
+//            }
+//        }
+//
+//
+//
+//        orderRepository.save(order);
+//
+//        List<OrderItemDto> orderItemDtos = order.getOrderItems().stream()
+//                .map(OrderItemDto::new)
+//                .collect(Collectors.toList());
+//        OrderDto dto = OrderDto.builder()
+//                .orderNo(order.getId())
+//                .orderId(order.getOrderId())
+//                .totalPrice(totalAmount)
+//                .items(orderItemDtos)
+//                .userName(user.getName())
+//                .email(user.getEmail())
+//                .phone(user.getPhone())
+//                .pCode(user.getP_code())
+//                .loadAddress(user.getLoadAddr())
+//                .lotAddress(user.getLotAddr())
+//                .detailAddress(user.getDetailAddr())
+//                .build();
+//
+//        return dto;
+//    }
 
     // 주문 생성
-    public OrderDto createOrder(String email, List<Long> itemIds) {
-        Users user = userRepository.findByEmail(email).orElseThrow(() -> new EntityNotFoundException("해당 유저를 찾을 수 없습니다"));
+    public OrderDto createOrder(String email, List<Long> itemIds, Long couponId) {
+        Users user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new EntityNotFoundException("해당 유저를 찾을 수 없습니다"));
 
-        List<OrderItem> orderItems = new ArrayList<>();
-        int totalAmount = 0;
-
-        // 기존 주문이 있는지 확인하고, 있는 경우 기존 주문에 항목 추가
-        List<Order> existingOrders = findExistingOrders(user);
+        List<Order> existingOrders = orderRepository.findByUsersAndOrderStatus(user, OrderStatus.STAY);
         Order order;
+
         if (!existingOrders.isEmpty()) {
             order = existingOrders.get(0);
+            // 기존 주문 항목 모두 제거
+            order.getOrderItems().clear();
+
+            for (int i = 1; i < existingOrders.size(); i++) {
+                orderRepository.delete(existingOrders.get(i));
+            }
         } else {
             order = Order.createOrder(user, new ArrayList<>());
+            order.setOrderStatus(OrderStatus.STAY);
             orderRepository.save(order);
         }
 
+        // 쿠폰 적용
+        if (couponId != null) {
+            UserCoupon userCoupon = userCouponRepository.findById(couponId)
+                    .orElseThrow(() -> new IllegalArgumentException("쿠폰을 찾을 수 없습니다"));
+
+            // 쿠폰이 해당 사용자의 것인지 확인
+            if (!userCoupon.getUser().getId().equals(user.getId())) {
+                throw new IllegalArgumentException("해당 쿠폰을 사용할 수 없습니다");
+            }
+
+            // 사용 여부 체크 및 예외 발생/사용 처리 모두 제거
+            order.setUserCoupon(userCoupon);
+        }
+
+        List<OrderItem> newItems = new ArrayList<>();
+        int totalAmount = 0;
+
         for (Long cartItemId : itemIds) {
-            CartItem cartItem = cartItemRepository.findById(cartItemId).orElseThrow(() -> new IllegalArgumentException("찾는 아이템이 없습니다"));
+            CartItem cartItem = cartItemRepository.findById(cartItemId)
+                    .orElseThrow(() -> new IllegalArgumentException("찾는 아이템이 없습니다"));
             Product product = cartItem.getProduct();
             ProductModel productModel = cartItem.getProductModel();
+
+            OrderItem orderItem = OrderItem.createOrderItems(product, productModel, cartItem.getCount());
+            orderItem.setOrder(order);
+            newItems.add(orderItem);
+            totalAmount += orderItem.getTotalPrice();
 
             // 기존 주문 항목 중 동일한 제품 및 모델이 있는지 확인
             boolean exists = order.getOrderItems().stream()
                     .anyMatch(item -> item.getProduct().getId().equals(product.getId()) &&
                             item.getProductModel().getId().equals(productModel.getId()));
 
-            if (!exists) {
-                // 기존 주문 항목이 없는 경우 새로 추가
-                OrderItem orderItem = OrderItem.createOrderItems(product, productModel, cartItem.getCount());
-                order.addOrderItem(orderItem); // OrderItem 객체를 Order 객체에 추가
-                totalAmount += orderItem.getTotalPrice();
-            } else {
-                // 기존 주문 항목에 있고 수량의 차이가 있다면
-                OrderItem existingOrderItem = order.getOrderItems().stream()
-                        .filter(item -> item.getProduct().getId().equals(product.getId()) &&
-                                item.getProductModel().getId().equals(productModel.getId()))
-                        .findFirst()
-                        .orElseThrow(() -> new IllegalArgumentException("주문 항목을 찾을 수 없습니다."));
-
-                int newCount = cartItem.getCount();
-                int oldCount = existingOrderItem.getCount();
-                int difference = newCount - oldCount;
+//            if (!exists) {
+//                // 기존 주문 항목이 없는 경우 새로 추가
+//                OrderItem orderItem = OrderItem.createOrderItems(product, productModel, cartItem.getCount());
+//                order.addOrderItem(orderItem); // OrderItem 객체를 Order 객체에 추가
+//                totalAmount += orderItem.getTotalPrice();
+//            } else {
+//                // 기존 주문 항목에 있고 수량의 차이가 있다면
+//                OrderItem existingOrderItem = order.getOrderItems().stream()
+//                        .filter(item -> item.getProduct().getId().equals(product.getId()) &&
+//                                item.getProductModel().getId().equals(productModel.getId()))
+//                        .findFirst()
+//                        .orElseThrow(() -> new IllegalArgumentException("주문 항목을 찾을 수 없습니다."));
+//
+//                int newCount = cartItem.getCount();
+//                int oldCount = existingOrderItem.getCount();
+//                int difference = newCount - oldCount;
 
                 //재고 수 파악
 //                if (difference > 0) {
@@ -192,17 +315,20 @@ public class OrderService {
 //                } else {
 //                    existingOrderItem.getProductModel().addStock(Math.abs(difference));
 //                }
-
-                existingOrderItem.setCount(newCount);
-                totalAmount += existingOrderItem.getTotalPrice();
-            }
+//
+//                existingOrderItem.setCount(newCount);
+//                totalAmount += existingOrderItem.getTotalPrice();
+//            }
         }
 
+        order.getOrderItems().addAll(newItems);
+//        order.setOrderItems(newItems);
         orderRepository.save(order);
 
         List<OrderItemDto> orderItemDtos = order.getOrderItems().stream()
                 .map(OrderItemDto::new)
                 .collect(Collectors.toList());
+
         OrderDto dto = OrderDto.builder()
                 .orderNo(order.getId())
                 .orderId(order.getOrderId())
@@ -275,7 +401,7 @@ public class OrderService {
     }
 
 
-    // 유효성 검사
+    // 유효성 검사 - 쿠폰 할인이 적용된 실제 결제 금액으로 검증
     @Transactional(readOnly = true)
     public boolean validatePayment(String orderId, int amount) {
         try {
@@ -284,15 +410,32 @@ public class OrderService {
                     .orElseThrow(() -> new IllegalArgumentException("주문 정보를 찾을 수 없습니다."));
 
             // 주문 상세 항목의 가격을 합산합니다.
-            int price = 0;
-            for (OrderItem orderItem : order.getOrderItems()) {
-                price += orderItem.getTotalPrice();
+            int totalPrice = order.getOrderItems().stream()
+                    .mapToInt(OrderItem::getTotalPrice)
+                    .sum();
+
+            // 배송비 계산 (5만원 미만 시 3,000원)
+            int deliveryFee = totalPrice >= 50000 ? 0 : 3000;
+
+            // 쿠폰 할인 계산
+            int discountAmount = 0;
+            if (order.getUserCoupon() != null) {
+                Coupon coupon = order.getUserCoupon().getCoupon();
+                if (coupon.getType() == CouponType.AMOUNT) {
+                    discountAmount = coupon.getDiscountAmount();
+                } else if (coupon.getType() == CouponType.PERCENT) {
+                    discountAmount = (int) Math.floor(totalPrice * coupon.getDiscountPercent() / 100.0);
+                }
             }
 
+            // 실제 결제 금액 계산
+            int expectedAmount = totalPrice + deliveryFee - discountAmount;
+
             // 결제 금액 확인
-            if (price == amount) {
+            if (expectedAmount == amount) {
                 return true;
             } else {
+                log.error("결제 금액 불일치: 예상={}, 실제={}", expectedAmount, amount);
                 throw new IllegalArgumentException("결제 금액이 올바르지 않습니다.");
             }
         } catch (IllegalArgumentException e) {
@@ -310,8 +453,6 @@ public class OrderService {
             Order order = orderRepository.findByOrderId(orderId).orElseThrow(() -> new EntityNotFoundException("주문정보를 찾을수 없습니다"));
             order.updatePaymentInfo(paymentMethod, payInfo);
             orderRepository.save(order);
-//            cartService.clearCart(orderId);
-// 결제가 다 되면 장바구니 비우기  > 주문한것만 지워야 함
 
         } catch (EntityNotFoundException e) {
             log.error("updateOrderWithPaymentInfo 에서 발생: {}", e.getMessage());
@@ -348,11 +489,15 @@ public class OrderService {
 
         int totalAmount = (int)cartDto.getTotalPrice();
 
-        // 기존 주문에 해당 상품이 있는지 확인하고, 있는 경우 기존 주문에 항목 추가
-        List<Order> existingOrders = findExistingOrders(user);
+        // 기존 주문에 해당 상품이 있는지 확인하고, 있는 경우 기존 주문 삭제
+        List<Order> existingOrders = orderRepository.findByUsersAndOrderStatus(user, OrderStatus.STAY);
         Order order;
         if (!existingOrders.isEmpty()) {
             order = existingOrders.get(0);
+            order.getOrderItems().clear();
+            for (int i = 1; i < existingOrders.size(); i++) {
+                orderRepository.delete(existingOrders.get(i));
+            }
         } else {
             order = Order.createOrder(user, new ArrayList<>());
             orderRepository.save(order);
@@ -469,5 +614,85 @@ public class OrderService {
 
         List<OrderDto> subList = allItems.subList(start, end);
         return new PageImpl<>(subList, pageable, allItems.size());
+    }
+
+    // 쿠폰을 주문에 적용 (쿠폰 사용 처리 X, 결제 시점에만 처리)
+    @Transactional
+    public void applyCouponToOrder(String orderId, Long couponId, String email) {
+        Users user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("유저를 찾을 수 없습니다"));
+
+        Order order = orderRepository.findByOrderId(orderId)
+                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다"));
+
+        UserCoupon userCoupon = userCouponRepository.findById(couponId)
+                .orElseThrow(() -> new IllegalArgumentException("쿠폰을 찾을 수 없습니다"));
+
+        // 쿠폰이 해당 사용자의 것인지 확인
+        if (!userCoupon.getUser().getId().equals(user.getId())) {
+            throw new IllegalArgumentException("해당 쿠폰을 사용할 수 없습니다");
+        }
+
+        // 주문에 이미 같은 쿠폰이 연결되어 있으면 그냥 리턴
+        if (order.getUserCoupon() != null && order.getUserCoupon().getId().equals(couponId)) {
+            return;
+        }
+        order.setUserCoupon(userCoupon);
+        orderRepository.save(order);
+    }
+
+    // 쿠폰 할인이 적용된 실제 결제 금액 계산
+    @Transactional(readOnly = true)
+    public int getFinalPaymentAmount(String email) {
+        Users user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("유저를 찾을 수 없습니다"));
+
+        Order order = orderRepository.findByUsersAndOrderStatus(user, OrderStatus.STAY)
+                .stream()
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다"));
+
+        int totalPrice = order.getOrderItems().stream()
+                .mapToInt(OrderItem::getTotalPrice)
+                .sum();
+
+        // 배송비 계산 (5만원 미만 시 3,000원)
+        int deliveryFee = totalPrice >= 50000 ? 0 : 3000;
+
+        // 쿠폰 할인 계산
+        int discountAmount = 0;
+        if (order.getUserCoupon() != null) {
+            Coupon coupon = order.getUserCoupon().getCoupon();
+            if (coupon.getType() == CouponType.AMOUNT) {
+                discountAmount = coupon.getDiscountAmount();
+            } else if (coupon.getType() == CouponType.PERCENT) {
+                discountAmount = (int) Math.floor(totalPrice * coupon.getDiscountPercent() / 100.0);
+            }
+        }
+
+        return totalPrice + deliveryFee - discountAmount;
+    }
+
+    @Transactional
+    public void markCouponUsedForOrderByEmail(String email) {
+        Users user = userRepository.findByEmail(email).orElse(null);
+        if (user == null) return;
+        Order order = orderRepository.findByUsersAndOrderStatus(user, OrderStatus.STAY)
+                .stream().findFirst().orElse(null);
+        if (order == null) return;
+        if (order.getUserCoupon() == null) return;
+        if (order.getUserCoupon().isUsed()) return;
+        order.getUserCoupon().setUsed(true);
+        userCouponRepository.save(order.getUserCoupon());
+    }
+
+    @Transactional
+    public void markCouponUsedForOrder(String orderId) {
+        Order order = orderRepository.findByOrderId(orderId).orElse(null);
+        if (order == null) return;
+        if (order.getUserCoupon() == null) return;
+        if (order.getUserCoupon().isUsed()) return;
+        order.getUserCoupon().setUsed(true);
+        userCouponRepository.save(order.getUserCoupon());
     }
 }
